--- a/Backend_proxy/package.json
+++ b/Backend_proxy/package.json
@@ -2,6 +2,7 @@
   "name": "backend_proxy",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
